--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,13 @@
 			<version>3.1.0.RELEASE</version>
 		</dependency>
 
+	<!-- Spring JDBC -->
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.9</version>
+	</dependency>
+
 	</dependencies>
     <build>
         <plugins>
